--- a/src/Treehouse.FitnessFrog/Treehouse.FitnessFrog.csproj
+++ b/src/Treehouse.FitnessFrog/Treehouse.FitnessFrog.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AccountRegisterViewModel.cs" />
+    <Compile Include="ViewModels\AccountSignInViewModel.cs" />
     <Compile Include="ViewModels\EntriesAddViewModel.cs" />
     <Compile Include="ViewModels\EntriesBaseViewModel.cs" />
     <Compile Include="ViewModels\EntriesEditViewModel.cs" />
@@ -193,6 +194,7 @@
     <Content Include="Views\Shared\_Logo.cshtml" />
     <Content Include="Views\Entries\_EntryForm.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\SignIn.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
