Added the "_Menu" partial view

--- a/src/Treehouse.FitnessFrog/Treehouse.FitnessFrog.csproj
+++ b/src/Treehouse.FitnessFrog/Treehouse.FitnessFrog.csproj
@@ -195,6 +195,7 @@
     <Content Include="Views\Entries\_EntryForm.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\SignIn.cshtml" />
+    <Content Include="Views\Shared\_Menu.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
